# xerox-parc-uplib-mirror

./: EXTERNAL_CODE  Makefile.in  README  configure  configure-files.py  configure.in  default-controls-template  reconfigure.in  replacements.in  site.config.in  stunnel.pem  uplib.uno.pkg
c/: Makefile.in
c/findimages/: Makefile.in  findimages.c  images.info  images.py
commandline/: Makefile.in  mount_uvfs.in  mount_uvfs2.in  readup.in  uplib-add-document.in  uplib-cache-url.in  uplib-certificate.in  uplib-check-angel.in  uplib-get-document.in  uplib-janitor.in  uplib-make-repository.in  uplib-openoffice-convert-to-pdf-via-server.in  uplib-openoffice-convert-to-pdf.in  uplib-pdf2ps.in  uplib-portal.in  uplib-ps2pdf.in  uplib-setup-openoffice.in  uplib-topdf.in  uplib-version.in  uplib-webkit2pdf.in
doc/: ACKNOWLEDGEMENTS.txt  ARCHITECTURE.txt  CHANGES.txt  EXTENDING.txt  FAQ.html  FAQ.html.in  INSTALL.txt  METADATA.txt  Makefile.in  REQUIREMENTS.txt  USAGE.txt  WINDOWS.txt  about.html  about.html.in  collections.html  collections.html.in  docs.tgz  epydoc-config.ini  extensions.html  extensions.html.in  getting-started-on-a-mac.txt  index.html  index.html.in  info.html  info.html.in  javaapidocs.tgz  manual.txt  manual.txt.in  pyapidocs.tgz  searching.html  searching.html.in  uplib-add-document.1  uplib-certificate.1  uplib-get-document.1  uplib-janitor.1  uplib-make-repository.1  uplib-portal.1  uplib.n  uplibdoc-style.tex  uplibdoc-stylesheet.css
email/: imapcrawler.py  mailcrawler.py
extensions/: CiteSeerX.info  CiteSeerX.py  CiteULike.info  CiteULike.py  FetchACMBibTex.info  FetchACMBibTex.py  FilterWebPage.info  FilterWebPage.py  IMAPServer.info  Makefile.in  NYTimes.info  NYTimes.py  NltkTagger.info  Person.info  RSSReader.info  RSSReader.py  SynchronizeRepositories.info  SynchronizeRepositories.py  UVFS.info  UVFS.py  UploadDocument.info  UploadDocument.py  WashPost.info  WashPost.py  ePub.info  ePub.py  iCalendar.info  vCardParser.info  video.info  video.py
extensions/IMAPServer/: __init__.py  abstractclasses.py  medusaHandler.py  uplibBinding.py
extensions/NltkTagger/: __init__.py  buildtntbrowntagger
extensions/Person/: Person.js  __init__.py
extensions/iCalendar/: __init__.py  parser.py  windows-timezones.xml
extensions/vCardParser/: __init__.py  parser.py
fuse/: __init__.py  ctypesfuse.py  uplibfuse.py
images/: cream12boldregular.pbm  cream12boldregular.pil
java/: Makefile.in  build-topdf-library.sh.in  machine.config.in  testClass.java  testLucene.java  testProperty.java
java/com/parc/uplib/indexing/: ExtractIndexingInfo.java  HeaderField.java  LuceneIndexing.java
java/com/parc/uplib/portal/: DesktopPortal.java  Janitor.java  Portal.java  RepositoryMonitor.java
java/com/parc/uplib/readup/applet/: UpLibPageview.java
java/com/parc/uplib/readup/application/: CardCatalog.java  (+4 more)
java/com/parc/uplib/topdf/: ToPDF.java
java/com/parc/uplib/util/: Base64.java  BaseApp.java  BrowserLauncher.java  CertificateHandler.java  ClientKeyManager.java  Configurator.java  DataURL.java  DocIDFilenameFilter.java  EmacsKeymap.java  ErrorDialog.java  FeedbackApp.java  FileBox.java  ListCookieHandler.java  LogStackTrace.java  MacOSXAppSupport.java  MetadataFile.java  PARCAwareCertHostnameVerifier.java  Rubberband.java  WorkPopup.java  WorkThread.java
java/javax/jnlp/: BasicService.java  ClipboardService.java  ServiceManager.java  ServiceManagerStub.java  SingleInstanceListener.java  SingleInstanceService.java  UnavailableServiceException.java
patches/: HTMLDOC-1.8.24-PATCH  MEDUSA-PATCH  MEDUSA-PATCH-2  PIL-1.1.7-msys-PATCH  ghostscript-8.71-mingw.patch  jasper-1.900-PATCH  jcc-2.9-mingw-PATCH  jpeg-msys-PATCH  medusa-0.5.4-PATCH  setuptools-0.6c9-PATCH  xpdf-3.00-PATCH  xpdf-3.01-PATCH  xpdf-3.02-PATCH  ytnef-2.6-patch
python/: Makefile.in
python/uplib/: __init__.py  addDocument.py  angelHandler.py  basicPlugins.py  categories.py  code_timer.py  collection.py  createHTML.py  createHotSpots.py  createIndexEntry.py  createPageBboxes.py  createThumbnails.py  document.py  emailParser.py  extensions.py  externalAPI.py  indexing.py  jpeg2000.py  language.py  links.py  macstuff.py  music.py  newFolder.py  pageview.py  paragraphs.py  plibUtil.py.in  pylsearch.py  related.py  repindex.py  repository.py  ripper.py  roman.py  service.py  startAngel.py  startTornado.py  static.py  tornadoHandler.py  webutils.py  xdocParser.py
tests/: Makefile.in  TestAdds.py  TestSupport.py  Tests.java  tests.uplibrc
tests/docs/: NOTES.txt  UpLib.html  email-with-attached-picture.eml  testpageMac2004.doc  testpageMac2008.doc  testpageMac2008.docx  uplib-logo.jp2  uplib-logo.tiff
tests/extensions/: TestSupportExt.info  TestSupportExt.py
unix/: Makefile.in
unix/linux/: Makefile.in  build-linux-installation.csh  epm-product.list  figure-linux-java.py
unix/macosx/: JanitorApp.tgz  MacPortalApp.tgz  Makefile.in  ReadUpApp.tgz  ScanSnapUpLib.applescript  StartUpLibRepositoriesApp.tgz  ToPDFApp.tgz  build-mac-installation.csh  buildpkg.py  com.parc.uplib.ToPDFAgent.plist.in  package-description.plist.in  package-properties.plist.in  postinstall.in  uplib-print-pdf-to-repository.in
unix/macosx/package-resources/: ReadMe.html  Welcome.txt  background.tiff
win32/: INSTRUCTIONS.txt  Makefile.in  build-msi-installer.py  build-windows-dist.py  build-windows-prereqs.sh  configure-target.py  createWinShortcuts.py.in  de-msys  find-javahome.py  htmldoc-isbuilder.nsi  install-script.py  post-install.py  promptClosePortal.py  removeAllUpLibGuardians.py  removeUpLibService.py  restartUpLibService.py  stopStartUpLibServices.py  unpack-uplib.py  uplib-installer.nsi  windows-service-template  windows.config.SAMPLE
win32/cmdprogs/: Makefile.in  readup.bat.in  uplib-add-document.bat.in  uplib-certificate.bat.in  uplib-check-angel.bat.in  uplib-check-windows-service-right.py.in  uplib-get-document.bat.in  uplib-janitor.bat.in  uplib-make-repository.bat.in  uplib-openoffice-convert-to-pdf.bat.in  uplib-portal.bat.in  uplib-ps2pdf.bat.in  uplib-tiff-split.bat.in  uplib-topdf.bat.in
(+40 files in other folders)
